HelloUltraviolet/Fixtures/RejectedSource/Procedures/UnsatisfiedPrecondition/Expected.uv
//! Expected diagnostic metadata for the UnsatisfiedPrecondition rejected-source specimen.

expectedDiagnostic("E-SEM-2801", "rule.15.Contract-Static-Fail")
